<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_menu_dashboard"
                android:title="@string/nav_menu_dashboard" />
        <item
                android:id="@+id/nav_menu_workouts"
                android:title="@string/nav_menu_workouts" />
        <item
                android:id="@+id/nav_menu_water_tracker"
                android:title="@string/nav_menu_water_tracker" />
    </group>

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_menu_my_account"
                android:title="@string/nav_menu_my_account" />
        <item
                android:id="@+id/nav_menu_logout"
                android:title="@string/nav_menu_logout" />
    </group>

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_menu_about_app"
                android:title="@string/nav_menu_about_app" />
        <item
                android:id="@+id/nav_menu_evaluate_app"
                android:title="@string/nav_menu_evaluate_app" />
    </group>
</menu>